// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatabasePlaceholder /> matches snapshot when fetching 1`] = `
<DatabasePlaceholder
  fetching={true}
  onTryAgainClick={[MockFunction]}
/>
`;

exports[`<DatabasePlaceholder /> matches snapshot when not fetching 1`] = `
<DatabasePlaceholder
  fetching={false}
  onTryAgainClick={[MockFunction]}
/>
`;
